[package]
name = "backoff-macro"
version = "0.1.0"
authors = ["twissel <twissel@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "0.14.2", features = ["full", "fold"] }
quote = "0.6"
proc-macro2 = { version = "0.4", features = ["nightly"] }
darling = {git = "https://github.com/TedDriggs/darling.git"}
futures = "0.2.1"
